fix h1 align

--- a/resources/css/admin-transmission-card.css
+++ b/resources/css/admin-transmission-card.css
@@ -53,6 +53,7 @@
     font-weight: bold;
     font-size: 1.5em;
     color: var(--primary-color);
+    text-align: center;
 }
 .program-detail .transmission-card-container .infos p {
     color: var(--light-gray);
